[LayoutNG] Fix margin rounding DCHECK

Bug: 900921
Change-Id: I4ce730d9fefb2b099cacc113d951238d302f8cc1
Reviewed-on: https://chromium-review.googlesource.com/c/1313168
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Aleks Totic <atotic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604675}
Former-commit-id: de919047744065673124f18a75d85aaf0e9605ff